# blit

./: .dockerignore  .envrc  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EMBEDDING.md  LICENSE  README.md  SERVICES.md  SKILL.md  SKILLS.md  UNSAFE.md  flake.nix  install.sh  process-compose.yml  pyproject.toml  welcome
.github/: blit.gpg
.github/workflows/: _build-packages.yml  _build-windows.yml  ci.yml  deploy-blit-cloud.yml  deploy-demo.yml  deploy-hub.yml  deploy-upsidedown.yml  deploy-website.yml  prepare-release.yml  publish-demo-image.yml  release.yml  tag-release.yml  test.yml
alacritty-driver/: Cargo.toml
alacritty-driver/src/: lib.rs
browser/: Cargo.toml
browser/src/: lib.rs
cli/: Cargo.toml
cli/src/: agent.rs  main.rs
config/fish/: config.fish
crates/alacritty-driver/: Cargo.toml
crates/alacritty-driver/src/: lib.rs
crates/blitz/: Cargo.toml
crates/blitz/src/: main.rs  peer.rs  server.rs  turn.rs
crates/browser/: Cargo.toml
crates/browser/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  cli.rs  fs.rs  generate.rs  git.rs  grep.rs  interactive.rs  learn.md  lsp.rs  main.rs  transport.rs  uplink.rs
crates/compositor/: Cargo.toml
crates/compositor/data/: us-qwerty.xkb
crates/compositor/src/: imp.rs  lib.rs  positioner.rs  render.rs  vulkan_encode.rs  vulkan_render.rs
crates/compositor/src/shaders/: bgra_to_nv12.comp  bgra_to_nv12.comp.spv  bgra_to_nv12_image.comp  bgra_to_nv12_image.comp.spv  bgra_to_yuv444.comp  bgra_to_yuv444.comp.spv  bgra_to_yuv444_image.comp  bgra_to_yuv444_image.comp.spv  composite.frag  composite.frag.spv  composite.vert  composite.vert.spv
crates/demo/: Cargo.toml
crates/desktop/src/: app.rs  connection.rs  main.rs  overlay.rs  palette.rs  statusbar.rs  terminal.rs
crates/fonts/: Cargo.toml
crates/fonts/src/: lib.rs
crates/fssync/: Cargo.toml
crates/fssync/src/: backend.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs
crates/git/: Cargo.toml
crates/git/src/: diffs.rs  lib.rs  requests.rs  state.rs
crates/git/tests/: engine.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/src/: main.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: attach.rs  backend.rs  discovery.rs  lib.rs  rpc.rs  tests.rs  text.rs  translate.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs  main.rs
crates/remote/: Cargo.toml
crates/remote/src/: fs.rs  git.rs  lib.rs  lsp.rs
crates/sd-notify/: Cargo.toml
crates/sd-notify/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: audio.rs  audio_pw.rs  dmabuf_zerocopy.rs  gpu_libs.rs  lib.rs  main.rs  nvenc_encode.rs  sd_notify.rs  surface_encoder.rs  vaapi_encode.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: lib.rs
crates/upsidedown/: Cargo.toml
crates/upsidedown/src/: certs.rs  config.rs  control.rs  jwt.rs  main.rs  store.rs  worker.rs
crates/webrtc-forwarder/: Cargo.toml
crates/webrtc-forwarder/src/: client.rs  lib.rs  main.rs  peer.rs  signaling.rs  turn.rs
crates/webserver/: Cargo.toml  build.rs
crates/webserver/src/: config.rs  lib.rs  passphrase.rs
demo/: Cargo.toml
demo/src/: main.rs
docs/: frontend.md  protocol.md  server.md  transports.md  tunnel.md  uplink.md  upsidedown.md
docs/design/: fs-watch.md  fs-write.md  git.md  lsp.md
docs/specs/: cli.md
drafts/claude/: blog-post.md
drafts/combined/: blog-post.md
drafts/iter/: blog-post.md
drafts/openai/: blog-post.md
drafts/reaction/: blog-post.md
e2e/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  start-servers.sh  tsconfig.json
e2e/tests/: assets.spec.ts  auth.spec.ts  terminal.spec.ts
examples/: fd-channel-bun.ts  fd-channel-python.py
fonts/: Cargo.toml
fonts/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: main.rs
js/: pnpm-lock.yaml  pnpm-workspace.yaml
js/blit-cloud/: README.md  fly.toml  package.json
js/blit-cloud/src/: index.ts
js/blit-hub/src/: index.ts
js/blitz/: README.md  package.json
js/blitz/src/: index.ts
js/core/: package-lock.json  package.json  tsconfig.json
js/core/src/: AudioPlayer.ts  BlitConnection.ts  BlitSurfaceCanvas.ts  BlitTerminalSurface.ts  BlitWorkspace.ts  SurfaceStore.ts  TerminalStore.ts  TerminalView.ts  exit-status.ts  fs.ts  git.ts  gl-renderer.ts  index.ts  keyboard.ts  kitty.ts  lsp.ts  measure.ts  node-wasm.ts  node.ts  protocol.ts  (+3 more)
js/demo/: Dockerfile  README.md  fly.toml  package.json
js/hub/: README.md  package.json
js/react/: package-lock.json  package.json
js/rendezvous/: README.md  package.json
js/solid/: package.json  vite.config.ts
js/ui/: index.html  package.json  vite.config.ts
js/web-app/: package-lock.json  vite.config.ts
js/website/: astro.config.ts  index.html  package.json  prerender.js  vite.config.ts
man/: blit-gateway.1.scd  blit-server.1.scd  blit-webrtc-forwarder.1.scd  blit.1.scd
nix/: README.md  common.nix  darwin-module.nix  nixos-module.nix  packages.nix  tasks.nix
npm/: Cargo.toml
npm/blit-bin/: README.md  index.d.ts  index.js  index.mjs  package.json  resolve.js
npm/src/: lib.rs
react/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
react/src/: BlitConnection.ts  BlitTerminal.tsx  TerminalStore.ts  gl-renderer.ts  index.ts  palettes.ts  protocol.ts  types.ts
remote/: Cargo.toml
remote/src/: lib.rs
scripts/: mkwheel.py
server/: Cargo.toml
server/src/: main.rs
systemd/: blit-server.service  blit-server.socket  blit-server@.service  blit-share@.service  blit-webrtc-forwarder@.service  blit.service  blit.socket
upsidedown/: Dockerfile  README.md  fly.toml
web/: index.html
web-app/: index.html  package-lock.json  package.json  vite.config.ts
web-app/src/: App.tsx  DisconnectedOverlay.tsx  ExposeOverlay.tsx  FontOverlay.tsx  HelpOverlay.tsx  Overlay.tsx  PaletteOverlay.tsx  StatusBar.tsx  Workspace.tsx  main.tsx  storage.ts  styles.ts  theme.ts  useMetrics.ts  wasm.ts
webserver/: Cargo.toml
webserver/src/: lib.rs
wezterm-driver/: Cargo.toml
wezterm-driver/src/: lib.rs
(+139 files in other folders)
