[workspace]
resolver = "2"
members = [
    "remote",
    "alacritty-driver",
    "server",
    "gateway",
    "browser",
    "demo",
    "cli",
    "fonts",
    "webserver",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/indent-com/blit"
homepage = "https://blit.sh"

[profile.release]
opt-level = "s"
lto = true
