[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "blit-server"
description = "blit terminal multiplexer server"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Rust",
    "Topic :: Terminals",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://blit.sh"
Repository = "https://github.com/indent-com/blit"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true
cargo-extra-args = "-p blit-server"
