[package]
name = "blitz"
version = "0.13.1"
edition = "2021"
description = "Share a terminal session via WebRTC"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "blitz"
path = "src/main.rs"

[dependencies]
blit-server = { workspace = true }
blit-remote = { workspace = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str0m = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.8"
