[package]
name = "blit-compositor"
version = "0.22.1"
edition = "2024"
description = "blit headless Wayland compositor"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
smithay = { version = "0.7.0", default-features = false, features = [
    "wayland_frontend",
    "desktop",
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "renderer_gl",
] }
calloop = "0.14"
libc = "0.2"
