[package]
name = "blit-compositor"
version = "0.25.0"
edition = "2024"
description = "blit headless Wayland compositor"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "staging", "unstable"] }
wayland-protocols-misc = { version = "0.3", features = ["server"] }
calloop = { version = "0.14", features = ["signals"] }
libc = "0.2"
ash = { version = "0.38", default-features = false, features = ["loaded"] }
