[package]
name = "blit-gateway"
version = "0.28.3"
edition.workspace = true
description = "blit WebSocket/WebTransport gateway"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "blit_gateway"
path = "src/lib.rs"

[dependencies]
blit-webserver = { workspace = true }
blit-webrtc-forwarder = { workspace = true }
blit-ssh = { workspace = true }
blit-proxy = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
web-transport-quinn = { version = "0.11", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
ring = "0.17"
rustls-pemfile = "2"
rustls-pki-types = "1"
socket2 = "0.6"
time = "0.3"
url = "2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
