[package]
name = "blit-proxy"
version = "0.22.1"
edition.workspace = true
description = "blit connection pool and protocol-transparent proxy"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "blit_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
web-transport-quinn = { version = "0.11", features = ["ring"] }
futures-util = "0.3"
bytes = "1"
url = "2"
blit-webrtc-forwarder = { workspace = true }
blit-ssh = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
