[package]
name = "blit-sd-notify"
version = "0.28.3"
edition.workspace = true
description = "Tiny no-dep sd_notify(3) implementation used by blit daemons"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "blit_sd_notify"
path = "src/lib.rs"

# systemd is Linux-only — gate libc here so we don't spuriously pull it in on
# macOS/BSDs/Windows where notify_ready is a no-op stub.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
