[package]
name = "blit-ssh"
version = "0.23.0"
edition.workspace = true
description = "Embedded SSH client for blit"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
russh = "0.60"
tokio = { version = "1", features = ["net", "io-util", "sync"] }
thiserror = "2"
log = "0.4"
